service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
